--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   transform: translateX(-50%); 
   border-width: 0 8px 8px; 
   border-style: solid;
-  border-color: transparent transparent #FDA214; /
+  border-color: transparent transparent #FDA214; 
 
 }
 
